; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_video.c_uninit_video_out.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_video.c_uninit_video_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32* }

@MPV_EVENT_VIDEO_RECONFIG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uninit_video_out(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %3 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %4 = call i32 @uninit_video_chain(%struct.MPContext* %3)
  %5 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %6 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %11 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @vo_destroy(i32* %12)
  %14 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %15 = load i32, i32* @MPV_EVENT_VIDEO_RECONFIG, align 4
  %16 = call i32 @mp_notify(%struct.MPContext* %14, i32 %15, i32* null)
  br label %17

17:                                               ; preds = %9, %1
  %18 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %19 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  ret void
}

declare dso_local i32 @uninit_video_chain(%struct.MPContext*) #1

declare dso_local i32 @vo_destroy(i32*) #1

declare dso_local i32 @mp_notify(%struct.MPContext*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
